--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
-file:///C:/Users/Admin/Downloads/index.html
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portal of Stefanie Alcazar</title>
+    <title>MICT06</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -36,22 +35,22 @@ file:///C:/Users/Admin/Downloads/index.html
     </style>
 </head>
 <body>
-    <h1>Welcome to Stefanie Alcazar's Portal</h1>
+    <h1><center></center>This website is all about Stefanie Alcazar</center></h1>
     <p>BTVTED Major in Computer Hardware Servicing | 3B</p>
 
     <div class="portal">
-        <a href="file:///C:/Users/Admin/Downloads/about%20me.html"_blank">Open My Biography</a>
-        <a href="file:///C:/Users/Admin/Downloads/cor.html" target="_blank">Open My Class Schedule</a>
-        <a href="file:///C:/Users/Admin/Downloads/educ.html" target="_blank">Open About My Education</a>
+        <a href="file:///C:/Users/Admin/Downloads/about%20me.html"_blank">/a>
+        <a href="file:///C:/Users/Admin/Downloads/cor.html" target="_blank"></a>
+        <a href="file:///C:/Users/Admin/Downloads/educ.html" target="_blank"></a>
     </div>
 </body>
 </html>
-file:///C:/Users/Admin/Downloads/about%20me.html
+
 <html>
 	<head>
 	<title> MY LIFE </title>
 	</head>
-
+<h><center></center>THIS IS MY BIOGRAPHY</center></center></h>
 	<body background="C:\Users\Admin\Downloads\465288240_886215126632547_6070452090654564686_n.jpg">
 <font size=40%><center><h1>ALL ABOUT TEP</h></center></font>
 
@@ -116,7 +115,7 @@ I will do my <u>best</u> just to fulfill all the sacrifices of my mom.
 </body>
 
 </html>
-file:///C:/Users/Admin/Downloads/cor.html
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -162,7 +161,7 @@ file:///C:/Users/Admin/Downloads/cor.html
     </style>
 </head>
 <body>
-
+<h><center></center> THIS IS MY CLASS SCHEDULE</center></h>
 <h2>Certificate of Registration</h2>
 
 <table>
@@ -332,52 +331,42 @@ file:///C:/Users/Admin/Downloads/cor.html
 
 </body>
 </html>
-file:///C:/Users/Admin/Downloads/educ.html
+
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portal of Stefanie Alcazar</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            text-align: center;
-            background-color: yellow;
-            color: #333;
-            margin: 0;
-            padding: 20px;
-        }
-        h1 {
-            color: red;
-        }
-        .portal {
-            margin-top: 50px;
-        }
-        .portal a {
-            display: inline-block;
-            margin: 15px;
-            padding: 10px 20px;
-            text-decoration: none;
-            background-color: red;
-            color: white;
-            border-radius: 5px;
-            font-size: 16px;
-        }
-        .portal a:hover {
-            background-color: darkred;
-        }
-    </style>
-</head>
+<html>
+ 
+<title>BUHAY KOLEHIYO</title>
+<br></br>
+<h2>
+<head4><center><b><size=50%>PROUD TO BE TCC SCHOLAR</b></center></head>
+</h>
+
+<body background="C:\Users\Admin\Downloads\download (1).jpg">
+<br></br>
+
 <body>
-    <h1>Welcome to Stefanie Alcazar's Portal</h1>
-    <p>BTVTED Major in Computer Hardware Servicing | 3B</p>
+I am Stefanie Alcazar, 22 years old, dreaming of finishing college and becoming a full-fledged teacher in the coming years. With the help of Tanauan City College, I was able to continue my studies. This institution has been a great support for someone like me who doesn’t earn enough daily but holds big dreams. Tanauan City College has been my partner in life for several years, witnessing my quirks, cheerfulness, sadness, fears, and hopes.
+Tanauan City College does not discriminate—whether rich or poor, they are ready to help. It also doesn’t limit by age; whether young or old, they extend their assistance. As a scholar of Tanauan City College, the support it provided not only helped me as a student but also made a big difference for my parents.
 
-    <div class="portal">
-        <a href="file:///C:/Users/Admin/Downloads/about%20me.html" target="_blank">Open My Biography</a>
-        <a href="file:///C:/Users/Admin/Downloads/cor.html" target="_blank">Open My Class Schedule</a>
-        <a href="file:///C:/Users/Admin/Downloads/educ.html" target="_blank">Open About My Education</a>
-    </div>
+<br></br>
+<br></br>
+
+<center>
+<h2><b>DEGREE PROGRAMS IN TCC</h></b>
+<table border=3 width"50%">
+<tr>
+<td bgcolor=pink>BS Accountantcy</td>
+<tr>
+<td bgcolor=pink>BS Management Accountanting</td>
+<tr>
+<td bgcolor=pink>BS Computer Engineering</td>
+<tr>
+<td bgcolor=pink>BS Entrepreneurship</td>
+<tr>
+<td bgcolor=pink>Bachelor of Technical Educational Teacher Education<td>
+</center>
+</tr>
+</table>
 </body>
-</html>
 
+</html>
